# adlab

./: .cursorrules  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .python-path  .step_completion_markers  ASYNC_FLOW_DIAGRAMS.md  ASYNC_IMPLEMENTATION_EXAMPLE.py  ASYNC_IMPLEMENTATION_GUIDE.md  ASYNC_OPPORTUNITIES_ANALYSIS.md  ASYNC_QUICK_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONCURRENCY_RISK_ANALYSIS.md  DEPLOYMENT_GUIDE.md  Dockerfile  GOOGLE_OAUTH_SETUP.md  LABORATORY_SETUP.md  MANUAL_TEST_CHECKLIST_COMPREHENSIVE.csv  MANUAL_TEST_CHECKLIST_STEPS_01_02.csv  MANUAL_TEST_CHECKLIST_STEPS_03_04.csv  MANUAL_TEST_CHECKLIST_STEP_16.csv  Makefile  NGINX_DEPLOYMENT_GUIDE.md  PRESENTACION_STAKEHOLDERS.md  PRESENTACION_STAKEHOLDERS_SHORT.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_CHECKLIST.md  README.md  SERVER_CONNECTION.md  STEP_01.1_COMPLETE.md  STEP_01_COMPLETE.md  STEP_03_COMPLETE.md  STEP_04_COMPLETE.md  STEP_06_COMPLETE.md  STEP_08_EMAIL_INTEGRATION_PLAN.md  STEP_08_IMPLEMENTATION_SUMMARY.md  STEP_15_COMPLETE.md  WORKFLOW_DIAGRAMS.md  (+9 more)
.devcontainer/: devcontainer.json
assets/: optimize-images.js  package.json
docs/: DOCKER_INTEGRATION_SUMMARY.md  DOCUMENTATION_SETUP.md  DOCUMENTATION_STRUCTURE.md  IDE_SETUP.md  QUICK_REFERENCE.md  README-MKDOCS.md  SCREENSHOT_CHECKLIST.md  index.md
etc/: garage.toml
main-project-docs/: INDEX.md  SOFTWARE_DEVELOPMENT_PLAN.md  requirements.txt
nginx/: README.md  nginx.conf
scripts/: build-docs.sh  ci-test.sh  create-admin-user.sh  db-dump.sh  db-list-backups.sh  db-restore.sh  docker-helper.sh  (+5 more)
(+416 files in other folders)
