[project]
name = "adlab"
version = "0.1.0"
description = "An example Django app running in Docker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django==5.2.7",
  "celery==5.5.3",
  "django-debug-toolbar==6.0.0",
  "gunicorn==23.0.0",
  "mkdocs==1.6.0",
  "mkdocs-material==9.5.40",
  "pillow==11.3.0",
  "psycopg==3.2.10",
  "pymdown-extensions==10.11.2",
  "qrcode==8.0",
  "redis==6.4.0",
  "reportlab==4.2.5",
  "ruff==0.14.0",
  "setuptools==80.9.0",
  "whitenoise==6.11.0",
  "safety>=3.6.2",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I", "SIM"]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "**/migrations"]
extraPaths = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoImportCompletions = true
diagnosticMode = "workspace"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
